# Calculator

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
calc/: __main__.py  app.py  calc.tcss  engine.py  widgets.py
src/: App.css  App.jsx  index.css
src/components/: BasicCalculator.jsx  Calculator.css  Display.css  Display.jsx  ProgrammerCalculator.jsx  ScientificCalculator.jsx  Sidebar.css  Sidebar.jsx
src/context/: ThemeContext.jsx
src/utils/: basicEngine.js  programmerEngine.js  scientificEngine.js
